# django-ninja-boilerplate

./: .env.example  .gitignore  README.md  manage.sh  pyproject.toml  start.sh
core/apps/authentication/: admin.py  api.py  authentication.py  consumers.py  models.py  routers.py  schemas.py  tasks.py  urls.py
core/apps/authentication/migrations/: 0001_initial.py
core/apps/common/: logger_utils.py
core/apps/example/: admin.py  api.py  consumers.py  models.py  routers.py  schemas.py  tasks.py  urls.py
core/core/: asgi.py  celery.py  urls.py
core/core/settings/: base.py  development.py  production.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
